Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,24 +10,16 @@ pool:
   vmImage: windows-latest
 
 stages:
-- stage: Prelude
+- stage: Only
   jobs:
-  - job: Pre1
+  - job: Only
     steps:
     - script: echo Hello, world!
       displayName: 'Run a one-line script'
-
-  - job: Pre2
-    steps:
     - script: |
         echo Add other tasks to build, test, and deploy your project.
         echo See https://aka.ms/yaml
       displayName: 'Run a multi-line script'
-
-- stage: Inter
-  jobs:
-  - job: Inter1
-    steps:
     - script: echo Second stage!
       displayName: 'Run another 1-liner'
 
